[gd_scene load_steps=51 format=3 uid="uid://31x7n43mme6c"]

[ext_resource type="Script" uid="uid://bmdh4vf3luco6" path="res://entity/actor/npc/enemy/enemy.gd" id="1_onpov"]
[ext_resource type="Material" uid="uid://4sxc1efucw5k" path="res://common/shader/dynamic_color_overlay.tres" id="2_ryg7q"]
[ext_resource type="Texture2D" uid="uid://c7rvngvjpf2nr" path="res://entity/actor/npc/enemy/art/ninja_red.png" id="2_vjnwt"]
[ext_resource type="PackedScene" uid="uid://d3g8jgprf7bfw" path="res://common/component/enemy_scanner/enemy_scanner.tscn" id="2_wj0qn"]
[ext_resource type="PackedScene" uid="uid://do052sqt3wjdp" path="res://common/component/detectbox/detectbox.tscn" id="3_vjnwt"]
[ext_resource type="PackedScene" uid="uid://bphvl1tkicrfo" path="res://common/component/hitbox/hitbox.tscn" id="4_pilld"]
[ext_resource type="PackedScene" uid="uid://l45622b15oap" path="res://common/component/attack/projectile_attack/projectile_attack.tscn" id="5_xmn1q"]
[ext_resource type="Script" uid="uid://lsk26m6ixhqu" path="res://common/state_machinie/state_machine.gd" id="6_lx6jr"]
[ext_resource type="Script" uid="uid://lnjp761bf75g" path="res://common/component/movement/base_movement.gd" id="6_pilld"]
[ext_resource type="PackedScene" uid="uid://bhgm1iqut1i6s" path="res://common/component/pathfinding/pathfinding.tscn" id="6_ryg7q"]
[ext_resource type="PackedScene" uid="uid://dagjfgo7sjdn0" path="res://entity/projectile/arrow/arrow.tscn" id="6_ump6o"]
[ext_resource type="Script" uid="uid://bu436ru5hhd66" path="res://common/component/animation/base_animation.gd" id="6_vjnwt"]
[ext_resource type="Script" uid="uid://ixpqntb22d76" path="res://entity/actor/npc/enemy/state/enemy_idle.gd" id="7_ryg7q"]
[ext_resource type="Script" uid="uid://v0ips7afnj6" path="res://entity/actor/npc/enemy/state/enemy_wander.gd" id="11_4568d"]
[ext_resource type="PackedScene" uid="uid://d0tswwb1d3smv" path="res://common/component/health/health_component.tscn" id="12_xmn1q"]
[ext_resource type="Script" uid="uid://btduv83t3tnr" path="res://entity/actor/npc/enemy/state/enemy_chase.gd" id="14_1l3k7"]
[ext_resource type="Script" uid="uid://dq7gm11wvwn6m" path="res://entity/actor/npc/enemy/state/enemy_attack.gd" id="15_tgdcv"]
[ext_resource type="Script" uid="uid://og75stne3wma" path="res://entity/actor/npc/enemy/state/enemy_back.gd" id="16_xmn1q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvn57"]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wj0qn"]
radius = 6.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xmn1q"]
radius = 100.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pilld"]
animation = &"AttackDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4568d"]
animation = &"AttackUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lx6jr"]
animation = &"AttackLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ryg7q"]
animation = &"AttackRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_87esk"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pilld")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_4568d")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_lx6jr")
blend_point_2/pos = Vector2(-0.9, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ryg7q")
blend_point_3/pos = Vector2(0.9, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4aipm"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_otyff"]
animation = &"MoveDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3pxj1"]
animation = &"MoveUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1l3k7"]
animation = &"MoveLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tgdcv"]
animation = &"MoveRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4aipm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_otyff")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_3pxj1")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_1l3k7")
blend_point_2/pos = Vector2(-0.9, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_tgdcv")
blend_point_3/pos = Vector2(0.9, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i87wb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iga26"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ocq7q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hww7n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mvkfs"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_iga26"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_87esk")
states/Attack/position = Vector2(348, -33)
states/Idle/node = SubResource("AnimationNodeAnimation_4aipm")
states/Idle/position = Vector2(348, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_4aipm")
states/Move/position = Vector2(576, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_i87wb"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_iga26"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_ocq7q"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_hww7n"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_mvkfs")]
graph_offset = Vector2(-111, -129)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xmn1q"]
graph_offset = Vector2(-214, -8)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_iga26")
nodes/StateMachine/position = Vector2(-80, 120)
node_connections = [&"output", 0, &"StateMachine"]

[sub_resource type="Animation" id="Animation_oas31"]
resource_name = "AttackDown"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(0, 5), Vector2i(0, 4), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_rhdt7"]
resource_name = "AttackLeft"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 3), Vector2i(2, 5), Vector2i(2, 4), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_87esk"]
resource_name = "AttackRight"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 3), Vector2i(3, 5), Vector2i(3, 4), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_bgeu8"]
resource_name = "AttackUp"
length = 0.666671
loop_mode = 1
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 3), Vector2i(1, 5), Vector2i(1, 4), Vector2i(1, 2)]
}

[sub_resource type="Animation" id="Animation_4aipm"]
resource_name = "Idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, -6), Vector2(0, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_ocq7q"]
resource_name = "MoveDown"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_hww7n"]
resource_name = "MoveLeft"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_mvkfs"]
resource_name = "MoveRight"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_iga26"]
resource_name = "MoveUp"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_i87wb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i87wb"]
_data = {
&"AttackDown": SubResource("Animation_oas31"),
&"AttackLeft": SubResource("Animation_rhdt7"),
&"AttackRight": SubResource("Animation_87esk"),
&"AttackUp": SubResource("Animation_bgeu8"),
&"Idle": SubResource("Animation_4aipm"),
&"MoveDown": SubResource("Animation_ocq7q"),
&"MoveLeft": SubResource("Animation_hww7n"),
&"MoveRight": SubResource("Animation_mvkfs"),
&"MoveUp": SubResource("Animation_iga26"),
&"RESET": SubResource("Animation_i87wb")
}

[node name="Ninja_red" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_onpov")

[node name="Sprite" type="Sprite2D" parent="."]
material = ExtResource("2_ryg7q")
position = Vector2(0, -6)
texture = ExtResource("2_vjnwt")
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lvn57")

[node name="Hitbox" parent="." instance=ExtResource("4_pilld")]
position = Vector2(0, -6)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_wj0qn")
debug_color = Color(0.639216, 0.529412, 0, 0.329412)

[node name="ProjectileAttack" parent="." instance=ExtResource("5_xmn1q")]
position = Vector2(0, -5)
projectile_scene = ExtResource("6_ump6o")
attack_cooldown = 1.0
target_groups = Array[StringName]([&"player", &"army"])

[node name="EnemyScanner" parent="." instance=ExtResource("2_wj0qn")]
position = Vector2(0, -15)

[node name="Detectbox" parent="EnemyScanner" instance=ExtResource("3_vjnwt")]
collision_mask = 257
radius = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyScanner/Detectbox"]
shape = SubResource("CircleShape2D_xmn1q")
debug_color = Color(0.933333, 0.141176, 0.533333, 0.164706)

[node name="Pathfinding" parent="." instance=ExtResource("6_ryg7q")]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Pathfinding"]
avoidance_enabled = true
radius = 1.0
avoidance_layers = 256
avoidance_mask = 256
debug_enabled = true

[node name="Movement" type="Node" parent="."]
script = ExtResource("6_pilld")

[node name="Animation" type="Node" parent="." node_paths=PackedStringArray("animation_tree")]
script = ExtResource("6_vjnwt")
animation_tree = NodePath("AnimationTree")

[node name="AnimationTree" type="AnimationTree" parent="Animation"]
tree_root = SubResource("AnimationNodeBlendTree_xmn1q")
anim_player = NodePath("../AnimationPlayer")
parameters/StateMachine/Attack/blend_position = Vector2(0.00197494, 0.905405)
parameters/StateMachine/Move/blend_position = Vector2(-0.162607, -0.756701)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
libraries = {
&"": SubResource("AnimationLibrary_i87wb")
}

[node name="HealthComponent" parent="." instance=ExtResource("12_xmn1q")]

[node name="WaitTimer" type="Timer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_lx6jr")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_ryg7q")

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource("11_4568d")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("14_1l3k7")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("15_tgdcv")

[node name="Back" type="Node" parent="StateMachine"]
script = ExtResource("16_xmn1q")
